# sprinkler

./: .coveragerc  .eslintrc.json  .flake8  .gitattributes  .gitignore  .prospector.yaml  Pipfile  manage.py  pyproject.toml  pytest.ini  readme.md  todo.md
controller/: __init__.py  api.py  settings.py  urls.py  utils.py  wsgi.py
controller/settings/: local.py
controller/tests/: controller_utils_test.py
docker/: Dockerfile-django  Dockerfile-worker  readme.md
docker/flower/: Dockerfile  tasks.py
docker/nginx/: Dockerfile  nginx.conf  ssl-params.conf
docs/: index.html
nginx/: Dockerfile  docker-compose.yml  nginx.conf
scheduler/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  utils.py  views.py
scheduler/management/commands/: zoneOff.py  zoneOn.py  zoneOnOff.py
scheduler/migrations/: 0001_initial.py  0002_alter_zonemap_num.py
scheduler/tests/: scheduler_views_test.py  views_test.py
scripts/: cron_run.sh  gpio_tool.py  zone_tool.py
static/css/: sprinkler.css
static/js/: index.js  schedule.js  schedules.js  utils.js
status/: views.py
status/tests/: status_views_test.py
templates/dtl/registration/: login.html
templates/jinja2/: base.html  index.html  schedule.html  schedules.html
templates/jinja2/accounts/: login.html
